feat: :sparkles: Add "Itens" tab

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,28 @@
     height: 100vh;
 }
 
+.sidebar-heading {
+    text-transform: uppercase;
+    padding: 0.5rem 1rem;
+    font-weight: 700;
+    color:white;
+    font-size: .8rem;
+}
+
 .card-title {
     margin: 0;
+}
+
+.nav-link-text {
+    color:#222;
+    font-weight: 600;
+}
+
+.breadcrumb {
+    padding: 0.5rem 1rem;
+    background-color: var(--bs-light);
+}
+
+.nav-link:hover {
+    color: #777;
 }
